--- a/core/common/softbus_property/BUILD.gn
+++ b/core/common/softbus_property/BUILD.gn
@@ -29,10 +29,8 @@ if (defined(ohos_lite)) {
       sources = [ "src/softbus_feature_config.c" ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$hilog_lite_deps_path",
-        "$libsec_deps_path",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
         "//build/lite/config/component/cJSON:cjson_static",
-        "//utils/native/base:utils",
       ]
     }
   } else {
