update tcp proxy code
Signed-off-by: bigpumpkin <chenzhennan@huawei.com>

--- a/core/transmission/trans_channel/proxy/BUILD.gn
+++ b/core/transmission/trans_channel/proxy/BUILD.gn
@@ -54,6 +54,7 @@ common_deps = [
   "$dsoftbus_core_path/transmission/common:dsoftbus_trans_common",
   "$dsoftbus_core_path/transmission/ipc:dsoftbus_trans_ipc_proxy",
   "$dsoftbus_root_path/adapter:softbus_adapter",
+  "$dsoftbus_root_path/core/transmission/pending_packet:softbus_trans_pending",
 ]
 
 if (defined(ohos_lite)) {
