--- a/sdk/transmission/session/BUILD.gn
+++ b/sdk/transmission/session/BUILD.gn
@@ -26,6 +26,7 @@ if (defined(ohos_lite)) {
     "$softbus_adapter_common/include",
     "$dsoftbus_core_path/common/include",
     "$dsoftbus_root_path/interfaces/inner_kits/transport",
+    "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_sdk_path/frame/common/include",
     "$libsec_include_path",
