--- a/core/bus_center/monitor/BUILD.gn
+++ b/core/bus_center/monitor/BUILD.gn
@@ -25,6 +25,32 @@ config("bus_center_monitor_interface") {
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
+    static_library("dsoftbus_bus_center_monitor") {
+      sources = [
+        "src/lnn_event_monitor.c",
+        "src/lnn_lwip_monitor.c",
+      ]
+      include_dirs = [
+        "$dsoftbus_root_path/core/adapter/kernel/include",
+        "$dsoftbus_root_path/core/common/include",
+        "$libsec_include_path",
+        "$hilog_lite_include_path",
+        "$hispark_pegasus_sdk_path/third_party/lwip_sack/include/lwip",
+      ]
+      cflags = [
+        "-Wall",
+        "-fPIC",
+        "-fno-builtin",
+        "-std=c99",
+      ]
+      public_configs = [ ":bus_center_monitor_interface" ]
+      deps = [
+        "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
+        "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
+        "$hilog_lite_deps_path",
+        "$libsec_deps_path",
+      ]
+    }
   } else {
     shared_library("dsoftbus_bus_center_monitor") {
       sources = [ "src/lnn_event_monitor.c" ]
