--- a/core/connection/manager/BUILD.gn
+++ b/core/connection/manager/BUILD.gn
@@ -28,7 +28,14 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/interfaces/kits/common",
         "$hilog_lite_include_path",
       ]
-      deps = [ "$hilog_lite_deps_path" ]
+      deps = [
+        "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
+        "$dsoftbus_root_path/core/common/utils:softbus_utils",
+        "$dsoftbus_root_path/core/connection/ble:ble_connection",
+        "$dsoftbus_root_path/core/connection/br:br_connection",
+        "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
+      ]
     }
   } else {
     shared_library("conn_manager") {
