--- a/core/transmission/common/BUILD.gn
+++ b/core/transmission/common/BUILD.gn
@@ -36,8 +36,6 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common/json_utils:json_utils",
     "$dsoftbus_root_path/core/common/log:softbus_log",
-    "$hilog_lite_deps_path",
-    "$libsec_deps_path",
   ]
 
   if (ohos_kernel_type == "liteos_m") {
@@ -57,7 +55,11 @@ if (defined(ohos_lite)) {
       ]
       sources = [ "src/softbus_message_open_channel.c" ]
       deps = common_deps
-      deps += [ "//build/lite/config/component/cJSON:cjson_shared" ]
+      deps += [
+        "$hilog_lite_deps_path",
+        "$libsec_deps_path",
+        "//build/lite/config/component/cJSON:cjson_shared",
+      ]
       public_configs = [ ":trans_common_interface" ]
     }
   }
