--- a/core/transmission/session/BUILD.gn
+++ b/core/transmission/session/BUILD.gn
@@ -58,12 +58,12 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
     "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
-    "$hilog_lite_deps_path",
   ]
 
   if (ohos_kernel_type == "liteos_m") {
     static_library("dsoftbus_trans_session") {
       include_dirs = common_include
+      include_dirs += [ "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation/include" ]
       sources = [
         "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
@@ -98,6 +98,7 @@ if (defined(ohos_lite)) {
       public_configs = [ ":trans_session_interface" ]
       deps = common_deps
       deps += [
+        "$hilog_lite_deps_path",
         "//build/lite/config/component/cJSON:cjson_shared",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
