--- a/core/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/core/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -39,7 +39,6 @@ if (defined(ohos_lite)) {
     "$dsoftbus_core_path/transmission/common:dsoftbus_trans_common",
     "$dsoftbus_core_path/transmission/ipc:dsoftbus_trans_ipc_proxy",
     "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$libsec_deps_path",
   ]
 
   common_include = [
@@ -75,7 +74,10 @@ if (defined(ohos_lite)) {
       sources = common_src
       public_configs = [ ":trans_direct_channel_interface" ]
       deps = common_deps
-      deps += [ "//build/lite/config/component/cJSON:cjson_shared" ]
+      deps += [
+        "$libsec_deps_path",
+        "//build/lite/config/component/cJSON:cjson_shared",
+      ]
     }
   }
 } else {
