--- a/sdk/transmission/session/BUILD.gn
+++ b/sdk/transmission/session/BUILD.gn
@@ -42,13 +42,15 @@ if (defined(ohos_lite)) {
     "$dsoftbus_sdk_path/frame:softbus_client_frame",
     "$dsoftbus_sdk_path/transmission:dsoftbus_trans_session_manager_sdk",
     "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
-    "$hilog_lite_deps_path",
-    "$libsec_deps_path",
   ]
 
   if (ohos_kernel_type == "liteos_m") {
     static_library("dsoftbus_trans_session_sdk") {
       include_dirs = common_include
+      include_dirs += [
+        "$dsoftbus_root_path/sdk/transmission/trans_channel/manager/include",
+        "$dsoftbus_root_path/sdk/transmission/ipc/include",
+      ]
       sources = common_src
       deps = common_deps
     }
@@ -61,6 +63,10 @@ if (defined(ohos_lite)) {
       ]
       sources = common_src
       deps = common_deps
+      deps += [
+        "$hilog_lite_deps_path",
+        "$libsec_deps_path",
+      ]
     }
   }
 } else {
