--- a/sdk/transmission/ipc/BUILD.gn
+++ b/sdk/transmission/ipc/BUILD.gn
@@ -58,8 +58,8 @@ if (defined(ohos_lite)) {
       public_configs = [ ":trans_ipc_proxy_sdk_interface" ]
       deps = common_deps
       deps += [
-        "$hilog_lite_include_path",
-        "$libsec_include_path",
+        "$hilog_lite_deps_path",
+        "$libsec_deps_path",
         "//foundation/communication/ipc_lite:liteipc_adapter",
         "//foundation/distributedschedule/samgr_lite/samgr:samgr",
       ]
