--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -21,6 +21,7 @@ config("bus_center_server_interface") {
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/common/softbus_property/include",
     "$softbus_adapter_config/spec_config",
   ]
@@ -94,7 +95,6 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection:softbus_connection",
         "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
         "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
-        "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
         "$hilog_lite_deps_path",
         "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
@@ -168,7 +168,6 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/connection/manager:conn_manager",
       "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
       "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
-      "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
       "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
