--- a/core/common/message_handler/BUILD.gn
+++ b/core/common/message_handler/BUILD.gn
@@ -23,6 +23,8 @@ if (defined(ohos_lite)) {
   common_include = [
     "$dsoftbus_root_path/core/common/include",
     "$softbus_adapter_common/include",
+    "$libsec_include_path",
+    "$hilog_lite_include_path",
   ]
   common_deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
