--- a/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
@@ -27,6 +27,7 @@ shared_library("libsoftbus_stream") {
   include_dirs = [
     "include",
     "$softbus_adapter_common/include",
+    "$dsoftbus_root_path/components/nstackx_enhanced/fillp/include",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/interfaces/kits/common",
@@ -58,7 +59,7 @@ shared_library("libsoftbus_stream") {
   ]
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/components/nstackx_enhanced/fillp:Dstream",
+    "$dsoftbus_root_path/components/nstackx_enhanced/fillp:FillpSo",
     "$dsoftbus_root_path/core/common:softbus_core_common",
     "$dsoftbus_root_path/core/common/log:softbus_log",
     "//third_party/bounds_checking_function:libsec_shared",
